# transaction/entity.go
@@ -1,0 +1,18 @@
+package transaction
+
+import (
+	"GetfitWithPhysio-backend/service"
+	"GetfitWithPhysio-backend/user"
+)
+
+type Transaction struct {
+	Id               int
+	Id_user          int
+	Id_service       int
+	DesribeComplaint string
+	Amount           int
+	Code             string
+	Status           string
+	User             user.User       `gorm:"ForeignKey: Id_user"`
+	Service          service.Service `gorm:"ForeignKey: Id_service"`
+}
